Add stylelint to workflow

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: ESLint with bun
         run: bun run lint
+
+      - name: Stylelint with bun
+        run: bun run stylelint
