Add tailwind and typescript eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "plugins": ["react-hooks", "tailwindcss", "@typescript-eslint"],
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    "no-process-env": "error",
+    "tailwindcss/classnames-order": "warn",
+    "tailwindcss/no-custom-classname": "warn",
+    "tailwindcss/no-contradicting-classname": "error",
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
+  }
 }
